<resources>
    <string name="app_name">Billbudddy</string>
    <string name="billbuddy_chat">BillBuddy Chat</string>
    <string name="chat_screen_title">Chat screen title</string>
    <string name="chat_messages_list">Chat messages list</string>
    <string name="type_message_hint">Type a message</string>
    <string name="message_input_field">Message input field</string>
    <string name="send_message">Send Message</string>
    <string name="transaction_icon">Transaction type icon</string>
    <string name="chat">Chat</string>
    <string name="open_chat">Open chat</string>
    <string name="profile_image">Profile image</string>
    <string name="expense_icon">Expense tracking icon</string>
    <string name="chat_icon">Chat feature icon</string>
    <string name="app_logo">BillBuddy app logo</string>
    <string name="chat_button_icon">Chat button icon</string>
    <string name="select_user">Select User</string>
    <string name="video_call">Video Call</string>
    <string name="attach_image">Attach Image</string>
    <string name="add_new_split">Add new split expense</string>
    <string name="amount_input_description">Amount input for splitting bill with %1$s</string>
    <string name="back">Back</string>
    <string name="back_button_description">Navigate back</string>
    <string name="contact_our_team">Contact Our Team</string>
    <string name="dev1_name">Kumar Chinmay</string>
    <string name="dev1_role">Lead Developer</string>
    <string name="dev1_email">kumar.cd22@bmsce.ac.in</string>
    <string name="dev1_phone">+91 8409812444</string>
    <string name="dev2_name">Piyush Verma</string>
    <string name="dev2_role">UI/UX Designer</string>
    <string name="dev2_email">piyush.ei22@bmsce.ac.in</string>
    <string name="dev2_phone">+91 96615 86180</string>
    <string name="dev3_name">Harsh Deep</string>
    <string name="dev3_role">Backend Developer</string>
    <string name="dev3_email">harshdeep.ei22@bmsce.ac.in</string>
    <string name="dev3_phone">+91 88617 40457</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="loading_amount">Loading...</string>
</resources>